Add FlatteningMap and EntityFlatteningMap